<resources>
    <string name="app_name">Metroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_icon">Top Icon</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">OR</string>
    <string name="new_user_register_now">New User Register Now</string>
    <string name="google_icon">Google Icon</string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tv_noNfc">There is no nfc can be used</string>
    <string name="contactless">Contactless</string>
    <string name="dosen_t_require_cash_or_n_even_swiping_a_card">Dosen\'t require cash OR \n even swiping a card</string>
    <string name="next">Next</string>
    <string name="easily_find_your_way">Easily find your way</string>
    <string name="now_you_can_know_the_price_n_of_metro_ticket_easily">Now you can know the price \n of metro ticket easily</string>
    <string name="you_can_buy_a_ticket_n_without_any_queue">you can buy a ticket \n without any queue</string>
    <string name="finish">Finish</string>
    <string name="confirmed_at">CONFIRMED AT</string>
    <string name="price">PRICE</string>
    <string name="trip">TRIP</string>
    <string name="seat">SEAT</string>
    <string name="passenger">PASSENGER</string>
    <string name="ticket">TICKET</string>
    <string name="buy_one_now">buy one now</string>
    <string name="you_don_t_have_any_tickets">you don\'t have any tickets</string>
    <string name="cancel_ticket">Cancel Ticket</string>
    <string name="you_don_t_have_any_tickets_to_delete">you don\'t have any tickets to delete</string>
    <string name="credit">Credit</string>
    <string name="trips">Trips</string>
    <string name="username">Username</string>
    <string name="phone_20">Phone: +20</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="feedback">FEEDBACK</string>
    <string name="subject">Subject</string>
    <string name="content">Content</string>
    <string name="submit">Submit</string>
    <string name="there_are_no_trips_yet">There Are No trips Yet!</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="forgot_your_password_no_problem">Forgot your password no problem</string>
    <string name="restore">Restore</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="settings">Settings</string>
    <string name="show_train_ticket">Show Train Ticket</string>
    <string name="delete_train_ticket">Delete Train Ticket</string>
    <string name="metro_trip_history">Metro Trip History</string>
    <string name="log_out">Log Out</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="price_l_e">Price L.E</string>
    <string name="metro_line">Metro Line</string>
    <string name="search">Search</string>
    <string name="welcome_to_train_n_reservation_page">Welcome To Train \n reservation page</string>
    <string name="touch_the_machine_to_pass">Touch The Machine to Pass</string>
    <string name="choose">choose</string>
    <string name="specific">specific</string>
    <string name="date">date</string>
    <string name="book">Book</string>
    <string name="now">NOW</string>
    <string name="quantity">Quantity</string>
    <string name="classTrain">Class</string>
    <string name="seat_number">Seat Number</string>
    <string name="confirm_ticket">Confirm Ticket</string>
    <string name="back_to_home">Back To Home</string>
    <string name="your_id">Your Id</string>
    <string name="recharge_your_account">Recharge Your Account</string>

</resources>