<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.main_Cycle.SettingsFragment">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/btnLogout"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="monospace"
                android:text="@string/settings"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/gl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/gl"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSettings">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvShow"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:focusable="true"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivItem"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_show_ticket" />

                        <TextView
                            android:id="@+id/tvItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/show_train_ticket" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvDelete"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivItem2"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_delete_ticket" />

                        <TextView
                            android:id="@+id/tvItem2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delete_train_ticket" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivItem3"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_feedback" />

                        <TextView
                            android:id="@+id/tvItem3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feedback" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cvEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivItem4"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_edit_profile" />

                        <TextView
                            android:id="@+id/tvItem4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_profile" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvMetroTripsHistory"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivItem5"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_history" />

                        <TextView
                            android:id="@+id/tvItem5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/metro_trip_history" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvShowId"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivItem6"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_recharge" />

                        <TextView
                            android:id="@+id/tvItem6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recharge_your_account" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>